k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverseproxy-deployment
  labels:
    app: reverseproxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: nginx-proxy
        image: nginx:alpine
        resources:
          limits:
            cpu: "500m"
        ports:
        - containerPort: 80
        imagePullPolicy: Always
