k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /agent
        pathType: Prefix
        backend:
          service:
            name: agent-service-api
            port:
              number: 8080
      - path: /master
        pathType: Prefix
        backend:
          service:
            name: master-service-api
            port:
              number: 8080
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service-api
            port:
              number: 8080
